# AITestProject

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: alerts.py  auth.py  events.py  ml.py  risk.py
app/core/: config.py  database.py  logging.py  redis_client.py  security.py
app/ml/: model.py  predictor.py
app/models/db/: __init__.py  alert.py  event.py  ml_model.py  risk_score.py  user.py
app/models/schemas/: alert.py  event.py  risk.py  user.py
app/services/: alert_service.py  feature_engineering.py  ip_geo_service.py  risk_engine.py
app/tasks/: alert_tasks.py  celery_app.py  collect_tasks.py  retrain_tasks.py  score_tasks.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 001_initial.py
ml_training/: train.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_feature_engineering.py  test_ml_model.py  test_risk_engine.py
