[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-media-risk-warning"
version = "0.1.0"
description = "社交媒体账号被盗风险预警系统"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # Redis & Cache
    "redis[hiredis]>=5.2.0",
    "aioredis>=2.0.1",

    # Celery Task Queue
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",

    # ML / Deep Learning
    "torch>=2.4.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Config & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # IP Geolocation
    "geoip2>=4.8.0",
    "aiohttp>=3.10.0",

    # Alert Channels
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.4",

    # Logging & Monitoring
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "user-agents>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "locust>=2.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
